# Geo-Analytics-API

./: Analyze-Regional-Performance.prompt.yml  Dockerfile  README.md  app.js  gaClient.js  geo-dashboard.ts  index.html  main.py  pyproject.toml  react-data-plugin.json  routes.py  server.js
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  dependabot.yml  lighthouse.yml  npm-publish.yml  reusable-publish.yml  sbom.yml
GitHub/workflows/: reusable-workflows.yml
docs/: API.md
middleware/: error_handler.py
routes/: health.py
